PyMaker/datas/object2/RawHTML/i3201/Python_DOC_referPages.cant-install-tensorflow-mac.txt
<div class="post-text" itemprop="text">
<p>I checked my pip3 &amp; python3 version: </p>
<pre><code>  (tensorflow) MacBook-Pro-de-Hector-2:tensorflow hectoresteban$ pip3 -V
    pip 10.0.1 from /Users/hectoresteban/.virtualenvs/tensorflow/lib/python3.7/site-packages/pip-10.0.1-py3.7.egg/pip (python 3.7)

(tensorflow) MacBook-Pro-de-Hector-2:tensorflow hectoresteban$ python3 -V
Python 3.7.0
</code></pre>
<p>In the virtual environment I am currently using I did:</p>
<pre><code>pip3 install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.9.0-py3-none-any.whl
</code></pre>
<p>As the standard way <code>pip3 install tensorflow</code> output the following message:</p>
<pre><code>could not find a version that satisfies the requirement tensorflow (from versions: )
</code></pre>
<p>After installed using the first method explained:</p>
<pre><code>(tensorflow) MacBook-Pro-de-Hector-2:tensorflow hectoresteban$ python3
&gt;&gt;&gt; import tensorflow
Traceback (most recent call last):
  File "&lt;stdin&gt;", line 1, in &lt;module&gt;
  File "/Users/hectoresteban/.virtualenvs/tensorflow/lib/python3.7/site-packages/tensorflow/__init__.py", line 22, in &lt;module&gt;
    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import
  File "/Users/hectoresteban/.virtualenvs/tensorflow/lib/python3.7/site-packages/tensorflow/python/__init__.py", line 49, in &lt;module&gt;
    from tensorflow.python import pywrap_tensorflow
  File "/Users/hectoresteban/.virtualenvs/tensorflow/lib/python3.7/site-packages/tensorflow/python/pywrap_tensorflow.py", line 58, in &lt;module&gt;
    from tensorflow.python.pywrap_tensorflow_internal import *
  File "/Users/hectoresteban/.virtualenvs/tensorflow/lib/python3.7/site-packages/tensorflow/python/pywrap_tensorflow_internal.py", line 114
    def TFE_ContextOptionsSetAsync(arg1, async):
                                             ^
SyntaxError: invalid syntax
</code></pre>
<p>What is the issue? I can download other packages such as numpy but no Tensorflow. (MacOS 10.13.4)</p>
</div>
<div class="post-text" itemprop="text">
<h3>Update: version 1.13 introduces Python 3.7 support</h3>
<p>The recent release candidate for the 1.13 version brings Python 3.7 support, in particular precompiled CPU wheels are also available for MacOS 10.11 and newer (<a href="https://pypi.org/project/tensorflow/1.13.1/#files" rel="nofollow noreferrer">link to 1.13.1</a>). Install as usual:</p>
<pre><code>$ pip install tensorflow&gt;=1.13
</code></pre>
<hr/>
<h3>Original answer (outdated)</h3>
<p><code>tensorflow</code> does not support Python 3.7 at the moment. The reason for this is that:</p>
<ul>
<li><p><code>tensorflow</code> uses <code>async</code> as function parameter name, and <code>async</code> and <code>await</code> became reserved keywords in Python 3.7 (as pointed by @phd in <a href="https://stackoverflow.com/questions/51337939/cant-install-tensorflow-mac#comment89789468_51337939">this comment</a>) - this is why you're getting the import error;</p></li>
<li><p>Python 3.7 changed the return type of <a href="https://docs.python.org/3/c-api/unicode.html#c.PyUnicode_AsUTF8AndSize" rel="nofollow noreferrer"><code>PyUnicode_AsUTF8AndSize</code></a> function in the C API used by <code>tensorflow</code>:</p>
<blockquote>
<p>Changed in version 3.7: The return type is now <code>const char *</code> rather of <code>char *</code>.</p>
</blockquote></li>
</ul>
<p>This means both issues must be fixed before <code>tensorflow</code> can be built and released for Python 3.7 &amp; Linux/MacOS. You can track the current status here: <a href="https://github.com/tensorflow/tensorflow/issues/20517" rel="nofollow noreferrer">issue #20517</a>.</p>
<p>The solution hence would be avoiding Python 3.7 if you need to continue working with <code>tensorflow</code>. Stick with Python 3.6 for the time being.</p>
<p>If you are willing to build <code>tensorflow</code> from source: <a href="https://github.com/tensorflow/tensorflow/issues/20517#issuecomment-406373913" rel="nofollow noreferrer">There is a patch proposed to fix both issues</a>. If you want to try it out, follow the <a href="https://www.tensorflow.org/install/install_sources" rel="nofollow noreferrer">Install TensorFlow from Sources</a> tutorial from the official docs, the only difference being on the beginning:</p>
<ol>
<li><p>Clone the repository</p>
<pre><code>$ git clone https://github.com/tensorflow/tensorflow
</code></pre></li>
<li><p>Copy the patch contents to a file, e.g. <code>tf.patch</code></p></li>
<li><p>Apply the patch:</p>
<pre><code>$ git apply tf.patch
</code></pre></li>
<li><p>Proceed with the rest of the tutorial.</p></li>
</ol>
<p>Also note that you will have to build the latest <code>protobuf</code>, as the support for Python 3.7 was added to it lately, but is not contained in any released version. Edit <code>tensorflow/contrib/cmake/external/protobuf.cmake</code> to point to the current <code>HEAD</code> of the <code>protobuf</code> repo.</p>
</div>
<span class="comment-copy">Python 3.7 is not supported yet. Install Python 3.6: if you've brewed Python 3, then <code>brew remove python3</code>, then <code>brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/f2a764ef944b1080be64bd88dca9a1d80130c558/Formula/python.rb</code>.</span>
<span class="comment-copy">As noted in the previous comment, TensorFlow does not support yet python 3.7. I just tested installing tensorflow==1.9 with python 3.6 with pip on osX and it works fine.</span>
<span class="comment-copy">Yeah, thanks guys</span>
<span class="comment-copy">The word <code>async</code> became a reserved keyword in Python 3.7. The code is for Python 3 &lt;= 3.6.</span>
<span class="comment-copy">@hoefling I'm facing the same issue with Python 3.6.6. Is Python 3.6.6 not supported as well?</span>
